  selected in the list. (Kazutoshi Satoda)

- A NPE fixed when creating and clearing a register quickly in a macro if the 
  Registers view is open (Matthieu Casanova)
  
- When clearing a register, the listeners are now notified (Matthieu Casanova)

- If you delete a plugin, the plugins that depends on will be unloaded (after a
  confirmation) (Matthieu Casanova)
}}}
{{{ Miscellaneous

- [About jEdit] dialog is refined. It now performs smoother animation
  and fade out effect. (xlinuks)

}}}
{{{ Editing

- SF Bug #1853797: perl syntax highlighting: broken '\' after var interpolation
  The rule for matching literals was wrongly highlighting perl variables.
  Fix is to use the same rule used in the main rule set to match those
  variables. (Marcelo Vanzin)

- Handling of /regexp/ in ruby mode is refined. (Kazutoshi Satoda)

  NOTE: If a regexp begins with a whitespace (including a newline), the
  beginning "/" is wrongly treated as a division operator. But such regexp
  is rare enough and one can use %r notations or write like "/\ ..." to
  force jEdit to treat it as a regexp.
  
- Added macro Files/Duplicate_Buffer.bsh
  It copies the current buffer in a new untitled buffer
  (Request #1849184) (Matthieu Casanova)

- Added macro Clipboard/Paste_Indent.bsh that paste and indent the clipboard
  (Request #1827083) (Matthieu Casanova)

}}}
{{{ API Changes

- Added class AbstractContextOptionPane for plugins which want to provide a
  panel similar to jEdit's context menu editor. The API is sort of restrictive
  right now, but can be enhanced later, if needed. (Marcelo Vanzin)

- Added a new method View#setBuffer(Buffer, boolean, boolean). The third
  parameter "focus" specifies whether the textarea should request focus.
  (Jeff Robertson - SF.net Patch #1852805)

- Added a new method View#showBuffer(Buffer), which is similer with
  goToBuffer() but doesn't move focus to the textarea.
  (Kazutoshi Satoda, based on Jeff Robertson's patch #1852805)
